--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "bcrypt": "^0.8.0",
     "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "connect-mongo": "^0.4.1",
+    "cookie-parser": "^1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
+    "express-session": "^1.9.1",
     "grunt": "^0.4.5",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
