--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "moment": "*",
     "mongodb": "*",
     "mongoose": "*",
-    "morgan": "~1.0.0",
+    "morgan": "^1.0.1",
     "static-favicon": "~1.0.0",
     "underscore": "*"
   },
